<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.bog.password_manager_android.RegistrationActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="169dp" />

    <EditText
        android:id="@+id/registration_login"
        android:layout_width="199dp"
        android:layout_height="31dp"
        android:hint="@string/hint_login"
        android:textAlignment="center"

        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="103dp"
        android:layout_weight="0.07" />

    <Button
        android:id="@+id/registration_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>
