<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.bog.password_manager_android.ListFragment">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_bottom"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimary"
    android:layout_alignParentBottom="true"
    android:minHeight="?attr/actionBarSize">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/add_resource"
        android:text="@string/add_resource"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/upload_resources"
        android:text="@string/upload"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/download_resources"
        android:text="@string/download"/>
</android.support.v7.widget.Toolbar>

<android.support.v7.widget.RecyclerView
    android:id="@+id/passwordsList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/toolbar_bottom" />

</RelativeLayout>